--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-cryptography==42.0.0
-pydantic==2.6.0
-pytest==8.0.0
-requests==2.31.0
+fastapi>=0.110.0
+uvicorn>=0.29.0
+cryptography>=43.0.0
+pydantic>=2.7.0
+pytest>=8.2.0
+requests>=2.32.0
