--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,15 +2,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Cài đặt dependencies
+# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy toàn bộ code vào /app
+# Copy all code into /app
 COPY . .
 
-# Đảm bảo Python tìm thấy các module trong thư mục hiện tại
+# Ensure Python finds modules in the current directory
 ENV PYTHONPATH=/app
 
-# Chạy app (Sử dụng lệnh linh hoạt)
+# Run app (using flexible command)
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
